fix app layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,14 @@ body {
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: first baseline;
+  justify-content: "flex-start";
   align-items: center;
   margin-top: 4rem;
-  margin-bottom: 4rem;
+  padding-bottom: 4rem;
   overflow-y: scroll;
 }
 
@@ -162,9 +162,10 @@ body {
   }
 
   .main-container {
+    height: 100vh;
     justify-content: center;
     margin-top: 2rem;
-    margin-bottom: 4rem;
+    padding-bottom: 2rem;
     overflow-y: scroll;
   }
 
@@ -192,9 +193,10 @@ body {
   }
 
   .main-container {
+    height: 100vh;
     justify-content: center;
     margin-top: 0rem;
-    margin-bottom: 0rem;
+    padding-bottom: 0rem;
     overflow-y: scroll;
   }
 
@@ -222,6 +224,7 @@ body {
   }
 
   .main-container {
+    height: 100vh;
     justify-content: center;
     margin-top: 0rem;
     margin-bottom: 0rem;
@@ -254,6 +257,7 @@ body {
     justify-content: "center";
     margin-top: 0rem;
     margin-bottom: 0rem;
+    padding-bottom: 0rem;
     overflow-y: scroll;
   }
 
